# aHash

./: .gitignore  Cargo.toml  FAQ.md  README.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
benchmark_tools/: Cargo.toml
benchmark_tools/src/: data_reader.rs  main.rs  persisting_hasher.rs
compare/: Cargo.toml  readme.md  results.html
compare/resources/: sheet.css
compare/src/: main.rs
compare/tests/: compare.rs
no_std_test/: Cargo.toml
no_std_test/src/: main.rs
smhasher/: 0001-Add-support-for-aHash.patch  ahashOutput.txt  clone_smhasher.sh  fallbackNoFoldedOutput.txt  fallbackOutput.txt
smhasher/ahash-cbindings/: Cargo.toml  install.sh
smhasher/ahash-cbindings/src/: lib.rs
src/: aes_hash.rs  convert.rs  fallback.rs  fallback_hash.rs  folded_multiply.rs  hash_map.rs  hash_quality_test.rs  hash_set.rs  lib.rs  operations.rs  random_state.rs  specialize.rs
src/aes_hash/: mod.rs  vaes.rs
test-block/: Cargo.toml
test-block/src/: main.rs
tests/: bench.rs  crypto.rs  map_tests.rs  nopanic.rs  specialize.rs
