[package]
name = "ahash"
version = "0.3.8"
authors = ["Tom Kaitchuck <Tom.Kaitchuck@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A non-cryptographic hash function using AES-NI for high performance"
documentation = "https://docs.rs/ahash"
repository = "https://github.com/tkaitchuck/ahash"
keywords = ["hash", "hashmap", "aes", "aes-ni", "no-std"]
edition = "2018"
readme = "README.md"

[lib]
name = "ahash"
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true

[features]
default = ["compile-time-rng", "std"]

# Enabling this will enable `AHashMap` and `AHashSet`
std = []

# Disabling this feature will make the `ABuildHasher::new` use a preset seed
# and disable the `Default` impl for `AHasher`
compile-time-rng = ["const-random"]

[[bench]]
name = "ahash"
path = "tests/bench.rs"
harness = false

[[bench]]
name = "map"
path = "tests/map_tests.rs"
harness = false

[profile.test]
opt-level = 2

[profile.release]
opt-level = 3
debug = false
lto = 'fat'
debug-assertions = false
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
lto = 'fat'
debug-assertions = false
codegen-units = 1

[dependencies]
const-random = { version = "0.1.6", optional = true }

[dev-dependencies]
no-panic = "0.1.10"
criterion = {version =  "0.3.0", features =["real_blackbox"]}
seahash = "3.0.5"
fnv = "1.0.5"
fxhash = "0.2.1"
hex = "0.3.2"
rand = "0.6.5"

[package.metadata.docs.rs]
rustc-args = ["-C", "target-feature=+aes"]
rustdoc-args = ["-C", "target-feature=+aes"]
features = ["std"]
