[package]
name = "aHash"
version = "0.1.0"
edition = "2018"
publish = false
description = "A tool for benchmarking hashing algorithms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
byteorder = "1.4.3"
ahash = "0.7.4"