[package]
name = "ahash-cbindings"
version = "0.1.0"
authors = ["Tom Kaitchuck <Tom.Kaitchuck@gmail.com>"]
edition = "2018"
description = "C bindings for aHash so that it can be invoked by SMHasher to verify quality."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ahash_c"
crate-type = ["staticlib"] # Creates static lib

[dependencies]
ahash = { path = "../../" }